# bowser

./: README.md  bowsermain.py  directorytree.py  imagegallery.py  imageviewer.py  main.py  metadataviewer.py  pyproject.toml  utils.py  videoviewer.py
apps/view/: README.md  pyproject.toml
apps/view/src/view/: __init__.py  directorytree.py  main.py  viewmain.py
workflows/: Flux2-IEdit-API.json  Flux2-Klein9B-API.json  Flux2-Klein9B-IEdit-API.json  FluxFixWithFlorance2-API.json  Qwen-IEdit-API.json  Wan22-Extend-24G-Q6-API.json  Wan22-FFILFI-API.json  Wan22-I2V-Lora-Lightning-API.json  Wan22-LF2V-Lora-Lightning-API.json  z_image_turbo-API.json
