[project]
name = "bowser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.0",
    "pyside6>=6.10.2",
    "core",
    "opencv-python>=4.13.0.92",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "apps/view",
    "apps/gen",
]

[tool.uv.sources]
core = { workspace = true }
