[project]
name = "view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "martinken", email = "168kmm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.1",
    "core",
]

[project.scripts]
view = "view.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
